[package]
name = "include_tt"
version = "1.1.0"
edition = "2024"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/include_tt.git"
license = "MIT OR Apache-2.0"
readme = "README.md"

description = "Macros for ultra-flexible injection of compiler trees, literals, or binary data into Rust syntax trees from external sources."
keywords = [
	"procedural-macros", 
	"macro", 
	"syntax-injection", 
	"tt-injection", 
	"clucompany"
]

categories = [
	"development-tools",
	"development-tools::build-utils",
	"parsing"
]

[features]
default = [ ]
escape_symbol = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
proc-macro2 = "1.0.95"

[dependencies.syn]
version = "2.0.104"
default-features = false
features = ["parsing"]
